<resources>
    <string name="app_name">荔枝优品</string>

    <string name="photograph">拍照</string>
    <string name="record_video">录视频</string>
    <string name="album_picker">从相册选择</string>
    <string name="file_provider_authorities_value">com.by.lizhiyoupin.app.fileprovider</string>
    <string name="scan_camera_authority_error">请在手机的系统设置或者管理软件中，允许荔枝优品访问你的相机</string>

    <string name="loading">正在加载...</string>
    <string name="no_more">没有更多了</string>
    <string name="fail_retry">重新加载</string>
    <string name="press_back_one_more_time_to_exit">再按一次退出APP</string>
    <string name="update_bottom_text">立即更新</string>
    <string name="update_after_text">稍后更新</string>
    <string name="value_null">--</string>
    <string name="cancel_txt">取消</string>
    <string name="confirm_txt">确定</string>
    <string name="delete_txt">删除</string>
    <string name="callback_txt">返回</string>
    <string name="submit_text">提交</string>
    <string name="search_txt">搜索</string>
    <string name="jump_txt">跳过</string>
    <string name="splash_goto_txt">立即进入</string>
    <string name="search_history_txt">搜索历史</string>
    <string name="search_history_all_txt">大家都在搜</string>
    <string name="home_search_top_hint_text">粘贴宝贝标题，先领券再购物</string>
    <string name="actionbar_close_text">关闭</string>
    <string name="share_qq_zone">QQ空间</string>
    <string name="share_wechat_moments">朋友圈</string>
    <string name="share_wechat">微信</string>
    <string name="share_sina_weibo">新浪微博</string>
    <string name="share_qq">QQ</string>
    <string name="invitation_code_hint">请输入您上级邀请码</string>
    <string name="invitation_code_by_official_text">您可输入官方邀请码：SE612X</string>
    <string name="select_pay_type_title_text">请选择付款方式</string>
    <string name="alipay_text">支付宝</string>
    <string name="wechat_text">微信</string>
    <string name="fail_retry_fullscreen">加载失败，点击重试！</string>
    <string name="fans_detail_code_text">微信号：%s</string>
    <string name="fans_detail_all_text">累计贡献(元)</string>
    <string name="fans_detail_last_month_for_me_text">上月为我贡献(元)</string>
    <string name="fans_detail_this_month_for_me_text">本月为我贡献(元)</string>
    <string name="fans_detail_registration_time_text">注册时间：%s</string>
    <string name="red_gift_package_title_text">恭喜您获得</string>
    <string name="red_gift_package_order_number_text">共%s笔订单，合计红包</string>
    <string name="red_gift_package_add_text">收入钱包</string>

    <!--订单-->
    <string name="order_search_number_hint">请输入订单编号</string>
    <string name="order_search_back_title">订单找回</string>
    <string name="order_search_not_find_title">未查询到该订单</string>
    <string name="order_search_not_find_reason_title">未查询到订单的可能原因：</string>
    <string name="order_find_error_content">1、订单有延迟，建议下单30分钟后在查询；\n2、非您购买或推广的订单；\n3、不是通过荔枝优品APP下的订单；\n4、其他，请联系客服；</string>
    <string name="order_find_success_content">恭喜您，成功找回订单\n马上去</string>


    <!--发圈-->
    <string name="daily_share_red_text">分享返红包</string>
    <string name="daily_price_text">%s元</string>
    <string name="business_search_you_want_text">搜索你想要的</string>
    <string name="business_litchi_consultation_text">玩转新型社交电商，让生意更简单！</string>
    <string name="business_item_share_text">分享</string>
    <string name="litchi_information_text">荔枝资讯</string>
    <string name="search_you_want_text">搜索你想要的</string>
    <string name="business_title_text">商学院</string>

    <!--下载apk-->
    <string name="apk_update_download_failed">下载失败，请稍后再重试</string>
    <string name="apk_update_downloading_progress">下载进度 </string>
    <string name="apk_update_no">以后再说</string>
    <string name="apk_update_tips_error_title">更新出现错误</string>
    <string name="apk_update_tips_title">正在更新</string>
    <string name="apk_update_yes">立即更新</string>
    <string name="download_cancel">取消下载</string>
    <string name="download_failure_file_not_found">下载更新App失败，要更新的App不存在</string>
    <string name="download_failure_net_deny">下载更新App失败，无法访问网络</string>
    <string name="download_failure_storage_permission_deny">下载更新App失败，无储存权限</string>
    <string name="download_success">下载完成,点击更新 [100%]</string>


    <string name="count_time_10_60_text_format">%1$s:%2$s:%3$s</string>

    <string name="dialog_sign_in_title_text">荔枝优品红包</string>
    <string name="dialog_sign_in_tips_text">恭喜您，今日获得红包</string>
    <string name="dialog_sign_in_tips_sunday_text">瓜分5千万，获得红包</string>
    <string name="dialog_sign_in_red_button_text">邀请好友红包翻倍</string>
    <string name="dialog_sign_in_accept_red_text">收下红包</string>
    <string name="share_sign_in_make_money_text">我已经在荔枝优品累计赚钱%s元,快来和我一起赚钱吧</string>
</resources>
