<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="@dimen/d_376"
                                                   android:background="@drawable/dialog_red_pager_bg"
                                                   android:orientation="vertical">

    <TextView
        style="@style/default_text_style"
        android:layout_marginTop="@dimen/d_42"
        android:drawableLeft="@drawable/dialog_red_pager_icon"
        android:drawablePadding="@dimen/d_06"
        android:text="@string/dialog_sign_in_title_text"
        android:textColor="@color/color_FFE6B5"
        android:textSize="@dimen/s_17"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/content_tips_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_109"
        android:text="@string/dialog_sign_in_tips_text"
        android:textColor="@color/color_FFE6B5"
        android:textSize="@dimen/s_22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.by.lizhiyoupin.app.component_ui.weight.MoneyTextView
        android:id="@+id/money_tv"
        style="@style/default_medium_text_style"
        android:layout_marginTop="@dimen/d_20"
        android:textColor="@color/color_FFE6B5"
        android:textSize="@dimen/s_49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_tips_tv"
        tools:text="¥8.88"/>

    <Button
        android:id="@+id/submit_btn"
        style="@style/default_medium_text_style"
        android:layout_height="@dimen/d_45"
        android:layout_marginBottom="@dimen/d_50"
        android:background="@drawable/sign_in_button_double"
        android:minWidth="@dimen/d_172"
        android:paddingLeft="@dimen/d_26"
        android:paddingRight="@dimen/d_26"
        android:singleLine="true"
        android:text="@string/dialog_sign_in_red_button_text"
        android:textColor="@color/color_BF4335"
        android:textSize="@dimen/s_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/accept_the_red_envelope"
        style="@style/default_text_style"
        android:layout_marginBottom="@dimen/d_10"
        android:paddingLeft="@dimen/d_20"
        android:paddingRight="@dimen/d_20"
        android:paddingBottom="@dimen/d_10"
        android:text="@string/dialog_sign_in_accept_red_text"
        android:textColor="@color/color_FEE47B"
        android:textSize="@dimen/s_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>