<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:orientation="vertical"
                                                   android:padding="@dimen/d_12">

    <ImageView
        android:id="@+id/invitation_code_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/d_05"
        android:src="@drawable/invitation_code_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/invitation_code_tv"
        style="@style/default_medium_text_style"
        android:layout_width="0dp"
        android:layout_height="@dimen/d_30"
        android:layout_marginLeft="@dimen/d_30"
        android:layout_marginTop="@dimen/d_40"
        android:layout_marginRight="@dimen/d_30"
        android:background="@drawable/shape_bg_invitation_code_corner"
        android:gravity="center_vertical"
        android:hint="@string/invitation_code_hint"
        android:maxLength="6"
        android:paddingLeft="@dimen/d_13"
        android:paddingRight="@dimen/d_13"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/cursor_bg_size"
        android:textColor="@color/color_999999"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/invitation_code_official_tv"
        style="@style/default_medium_text_333_style"
        android:layout_marginLeft="@dimen/d_10"
        android:layout_marginTop="@dimen/d_08"
        android:text="@string/invitation_code_by_official_text"
        app:layout_constraintLeft_toLeftOf="@+id/invitation_code_tv"
        app:layout_constraintTop_toBottomOf="@+id/invitation_code_tv"/>

    <TextView
        android:id="@+id/invitation_code_submit_tv"
        style="@style/default_text_style"
        android:layout_width="@dimen/d_60"
        android:layout_height="@dimen/d_20"
        android:layout_marginTop="@dimen/d_25"
        android:background="@color/color_D60050"
        android:gravity="center"
        android:text="@string/submit_text"
        android:textColor="@color/white_100"
        android:textSize="@dimen/s_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invitation_code_official_tv"/>

</androidx.constraintlayout.widget.ConstraintLayout>